--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,10 @@ path = "src/main.rs"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
+hyperpolyglot = "0.1"
 octocrab = "0.49"
 reqwest = { version = "0.13", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+toml = "0.9"
