--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "github-readme-stats"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 description = "Fetch GitHub user statistics as JSON"
 license = "MIT"
@@ -17,6 +17,7 @@ include = [
   "/LICENSE",
   "/build.rs",
   "/src/**",
+  "/data/**",
 ]
 
 [[bin]]
@@ -27,10 +28,13 @@ path = "src/main.rs"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
-hyperpolyglot = "0.1"
-octocrab = "0.49"
 reqwest = { version = "0.13", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+toml = "0.9"
+
+[build-dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
 toml = "0.9"
